<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/reddish">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_week_day_text"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/deep"
            android:textSize="14sp"/>
        <Spinner
            android:id="@+id/spinner"
            android:backgroundTint="@color/orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="2dp"
            android:background="@drawable/login_toggle_button_shape"
            android:spinnerMode="dropdown"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/course_code"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/course_code_text"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/deep"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/instructor_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/instructor_name_text"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/deep"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/room_number"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/room_number_text"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/deep"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/from_time"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/from_text"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/deep"
            android:inputType="time" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/to_time"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textColor="@color/deep"
        android:hint="@string/to_text"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_text"
            android:fontFamily="@font/poppins_medium"
            android:backgroundTint="#10991D"
            android:textSize="14sp"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_text"
            android:fontFamily="@font/poppins_medium"
            android:backgroundTint="#D23F3F"
            android:textSize="14sp"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

</LinearLayout>