<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView

        android:layout_width="match_parent"
        android:background="@color/deep"
        android:layout_height="match_parent"
        android:scrollbars="none"
        tools:context=".fragments.ClassScheduleFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent">

                <TextView
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:text="@string/classes_text"
                    android:textColor="@color/orange"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="33sp"
                    android:layout_marginStart="20dp"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_img"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/dummy_profile"
                    app:civ_border_color="@color/black"
                    android:layout_marginStart="80dp"
                    app:civ_border_width="2dp" />

            </LinearLayout>


            <LinearLayout
                android:layout_height="50dp"
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                >

                <TextView
                    android:id="@+id/sun"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:text="@string/sun_text"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/sweet"/>
                <TextView
                    android:id="@+id/mon"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:text="@string/mon_text"
                    android:textSize="15sp"
                    android:layout_marginStart="9dp"
                    android:textAlignment="center"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:textColor="@color/sweet"/>
                <TextView
                    android:id="@+id/tue"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:text="@string/tue_text"
                    android:textSize="15sp"
                    android:layout_marginStart="9dp"
                    android:textAlignment="center"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:textColor="@color/sweet"/>
                <TextView
                    android:id="@+id/wed"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:text="@string/wed_text"
                    android:textSize="15sp"
                    android:layout_marginStart="9dp"
                    android:textAlignment="center"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:textColor="@color/sweet"/>
                <TextView
                    android:id="@+id/thu"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:text="@string/thu_text"
                    android:textSize="15sp"
                    android:textAlignment="center"
                    android:fontFamily="@font/poppins_medium"
                    android:layout_marginStart="9dp"
                    android:gravity="center"
                    android:textColor="@color/sweet"/>
                <TextView
                    android:id="@+id/extra"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:text="@string/extra_text"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:layout_marginStart="9dp"
                    android:textColor="@color/sweet"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/clas_holderRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/message"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty_class_list_warning"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColor="@color/orange"
                android:layout_marginTop="200dp"
                android:fontFamily="@font/poppins_medium"/>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/plus"
        android:contentDescription="@string/add_text"
        android:layout_margin="16dp"
        android:tint="@color/deep" />









</RelativeLayout>