<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".screens.RegistrationScreen"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:transitionName="logo"
        android:src="@drawable/app_icon" />

    <TextView
        android:id="@+id/greetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:text="@string/register_screen_greetings"
        android:transitionName="text"
        android:textColor="@color/black"
        android:layout_marginTop="-20dp"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/toggle_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:transitionName="toggle"
        android:background="@drawable/login_page_button_holder_shape"
        android:gravity="center_vertical"
        >


        <TextView
            android:id="@+id/redirect_to_login_screen"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/login_text"
            android:textColor="@color/black"
            android:layout_marginStart="3dp"
            android:textSize="15sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="44dp"
            android:background="@drawable/login_toggle_button_shape"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/register_text"
            android:textColor="@color/black"
            android:textSize="18sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/batch_select_text"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:textSize="14sp"/>
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="2dp"
            android:background="@drawable/login_toggle_button_shape"
            android:spinnerMode="dropdown"/>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_text"
            android:transitionName="email"
            android:layout_below="@id/name"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:hint="@string/password_text"
            android:transitionName="password"
            app:passwordToggleEnabled="true"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:hint="@string/confirm_password_text"
            app:passwordToggleEnabled="true"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />


        </com.google.android.material.textfield.TextInputLayout>



        <RelativeLayout
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/spinner_bg_shape"
            android:elevation="10dp"
            android:visibility="gone"
            android:padding="20dp">


            <ProgressBar
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true" />
        </RelativeLayout>


    </RelativeLayout>

    <Button
        android:id="@+id/register_account_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_text"
        android:backgroundTint="#000"
        android:transitionName="btn"
        android:layout_marginBottom="5dp"/>






    <TextView
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/register_option_text"
        android:textColor="#8C8181"
        android:layout_gravity="center"
        android:transitionName="option"
        android:layout_marginTop="5dp"/>

    <LinearLayout
        android:id="@+id/optionsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:transitionName="option_image"
        android:orientation="horizontal"
        >


        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/login_information_holder_shape"
            android:src="@drawable/facebook"
            android:layout_margin="5dp"
            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/google_sign_in"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/login_information_holder_shape"
            android:src="@drawable/google"
            android:layout_margin="5dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/login_information_holder_shape"
            android:src="@drawable/github"
            android:layout_margin="5dp" />

    </LinearLayout>


</LinearLayout>