<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".screens.LoginScreen">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:transitionName="logo"
        android:src="@drawable/app_icon" />

    <TextView
        android:id="@+id/greetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:text="@string/login_screen_greetings"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:transitionName="text" />

    <LinearLayout
        android:id="@+id/page_toggle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:transitionName="toggle"
        android:background="@drawable/login_page_button_holder_shape"
        android:gravity="center_vertical"
        >


        <TextView
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:background="@drawable/login_toggle_button_shape"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/login_text"
            android:textColor="@color/black"
            android:layout_marginStart="5dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/redirect_to_registration_screen"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="44dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/register_text"
            android:textColor="@color/black"
            android:textSize="15sp" />


    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transitionName="email"
            android:hint="@string/email_text"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_below="@id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_text"
            android:transitionName="password"
            app:passwordToggleEnabled="true"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />


        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/forget_password"
            android:layout_width="200dp"
            android:layout_below="@id/password"
            android:layout_alignParentEnd="true"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/forget_password_text"
            android:layout_gravity="end"
            android:textColor="@color/black"
            android:textAlignment="textEnd"
            android:layout_margin="5dp"
            android:elevation="0dp"/>


        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/forget_password"
            android:text="@string/login_text"
            android:transitionName="btn"
            android:backgroundTint="#000000"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>






        <TextView
            android:id="@+id/options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_btn"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/other_options_text"
            android:transitionName="option"
            android:layout_marginTop="5dp"
            android:textColor="#8C8181"/>

        <LinearLayout
            android:id="@+id/option_image"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_below="@id/options"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:transitionName="option_image"
            android:orientation="horizontal"
            >


            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="@drawable/login_information_holder_shape"
                android:src="@drawable/facebook"
                />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="40dp"
                android:layout_margin="5dp"
                android:layout_height="40dp"
                android:background="@drawable/login_information_holder_shape"
                android:src="@drawable/google"
                />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="@drawable/login_information_holder_shape"
                android:src="@drawable/github"
                />

        </LinearLayout>


        <RelativeLayout
            android:id="@+id/loading"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_centerInParent="true"
            android:background="@drawable/spinner_bg_shape"
            android:elevation="10dp">


            <ProgressBar
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>